Added Secure tests to CoursesRestController tests pool